--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-image-magnify": "^2.7.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
+    "use-force-update": "^1.0.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
